Integração da Api no login e cadastro

--- a/Site/HTML/cadastro.HTML
+++ b/Site/HTML/cadastro.HTML
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PHOS - Cadastro</title>
-    <link rel="stylesheet" href="Site/Style/cabecalho.css">  
-    <link rel="stylesheet" href="/Site/Style/cadastro.css">
+    <link rel="stylesheet" href="../Style/cabecalho.css">  
+    <link rel="stylesheet" href="../Style/cadastro.css">
     <!-- css sem funcionar em pastas separadas -->
 </head>
 <body>
@@ -39,11 +39,10 @@
                  <label for="input_senha2">Confirmar Senha</label>
                  <input type="text" id="input_senha2" placeholder="Confirme a senha">
 
-                 <p class="login-link">Já possui conta?<a href="/Site/HTML/login.HTML">Faça login</a></p>
+                 <p class="login-link">Já possui conta?<a href="../HTML/login.HTML">Faça login</a></p>
                  <button onclick="cadastrar()">Cadastrar</button>
         </div>
     </div>
     </main>
-
 </body>
 </html>
