--- a/Site/HTML/login.HTML
+++ b/Site/HTML/login.HTML
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - PHOS</title>
-  <link rel="stylesheet" href="/Site/Style/cabecalho.css">
-  <link rel="stylesheet" href="/Site/Style/login.css">
+  <link rel="stylesheet" href="../Style/cabecalho.css">
+  <link rel="stylesheet" href="../Style/login.css">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
   </header>
 
   <main class="login-container">
-    <form class="login-form">
+    <div class="login-form">
       <img src="" alt="Logo PHOS" class="lamp-logo" />
       <h2 class="login-titulo">Login</h2>
 
@@ -31,11 +31,11 @@
       <input type="password" id="senha" placeholder="************" required />
 
       <p class="cadastro-texto">
-        Não possui uma conta? <a href="/Site/HTML/cadastro.HTML">Cadastrar!</a>
+        Não possui uma conta? <a href="../HTML/cadastro.HTML">Cadastrar!</a>
       </p>
 
       <button type="submit" class="login-button">Fazer Login</button>
-    </form>
+    </div>
   </main>
 
 </body>
