style: esboço da home

--- a/Site/Web-data-viz/public/cadastro copy.html
+++ b/Site/Web-data-viz/public/cadastro copy.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-      <div class="header">
+      <!-- <div class="header">
       <div class="container">
         <h1 class="titulo">AquaTech</h1>
         <ul class="navbar">
@@ -37,9 +37,9 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   <!--header inicio-->
-   <!-- <header>
+   <header>
     <div class="logo">PHOS</div>
     <nav>
         <a href="#">HOME</a>
@@ -47,7 +47,7 @@
         <a href="simulador.html">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
     </nav>
- </header> -->
+ </header> 
   <!--header fim-->
 
   <!-- <div class="login">
