--- a/Site/Web-data-viz/public/formulario.HTML
+++ b/Site/Web-data-viz/public/formulario.HTML
@@ -3,9 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monitamento diário</title>
+    <title>Monitamento Diário</title>
+    <link rel="stylesheet" href="./css/formulario.css">
 </head>
 <body>
+    <div class="box-formulario">
+    <h1>Monitoramento Diário</h1>
+
+<!-- 🤝 Muito sociável
+
+👂 Acolhido e compreendido
+
+😶 Indiferente
+
+🙃 Tímido/Reservado
+
+😠 Conflituoso -->
+    <div class="perguntas">Como você se sente hoje?
+        <div class="alternativas">
+        <button class="button_emocoes" onclick="p1_cansado">Cansado</button>
+        <button class="button_emocoes" onclick="p1_triste">Triste</button>
+        <button class="button_emocoes" onclick="p1_neutro">Neutro</button>
+        <button class="button_emocoes" onclick="p1_feliz">Feliz</button>
+        <button class="button_emocoes" onclick="p1_disposto">Disposto</button>
+    </div></div>
+
+       <div class="linha"></div>
+
+    <div class="perguntas">Como está sua conexão com outras pessoas hoje?
+        <div class="alternativas">
+        <button class="button_conexao" onclick="p1_cansado">Sociável</button>
+        <button class="button_conexao" onclick="p1_triste">Compreensão</button>
+        <button class="button_conexao" onclick="p1_neutro">Indiferente</button>
+        <button class="button_conexao" onclick="p1_feliz">Reservado</button>
+        <button class="button_conexao" onclick="p1_disposto">Conflituoso</button>
+    </div>
+    </div>
+
+        <div class="linha"></div>
     
+    <div class="perguntas">Como foi o impacto das pessoas no seu dia?
+        <div class="alternativas">
+            <p class="alternativa-legenda">Negativo</p>
+            <button class="button1" onclick="p2_1"></button>
+            <button class="button2" onclick="p2_2"></button>
+            <button class="button3" onclick="p2_3"></button>
+            <button class="button4" onclick="p2_4"></button>
+            <button class="button5" onclick="p2_5"></button>
+            <button class="button6" onclick="p2_6"></button>
+            <button class="button7" onclick="p2_7"></button>
+            <p class="alternativa-legenda">Positivo</p>
+    </div></div>
+
+        <div class="linha"></div>
+
+    <div class="perguntas">O quanto você impactou na vida de outra pessoa?
+            <div class="alternativas">
+            <p class="alternativa-legenda">Negativo</p>
+            <button class="button1" onclick="p2_1"></button>
+            <button class="button2" onclick="p2_2"></button>
+            <button class="button3" onclick="p2_3"></button>
+            <button class="button4" onclick="p2_4"></button>
+            <button class="button5" onclick="p2_5"></button>
+            <button class="button6" onclick="p2_6"></button>
+            <button class="button7" onclick="p2_7"></button>
+            <p class="alternativa-legenda">Positivo</p>
+    </div></div>
+
+       <div class="linha"></div>
+
+    <div class="perguntas">Quantas pessoas você acredita ter impactado positivamente hoje?
+        <div class="alternativas">
+        <button class="button_conexao" onclick="p1_cansado">1</button>
+        <button class="button_conexao" onclick="p1_triste">2</button>
+        <button class="button_conexao" onclick="p1_neutro">3</button>
+        <button class="button_conexao" onclick="p1_feliz">4</button>
+        <button class="button_conexao" onclick="p1_disposto">5 ou mais</button>
+    </div>
+    </div>
+
+       <div class="linha"></div>
+
+    <div class="perguntas">Hoje, você conseguiu enxergar beleza ou valor em alguém?
+        <div class="perguntas">Quantas pessoas você acredita ter impactado positivamente hoje?
+        <div class="alternativas">
+        <button class="button_conexao" onclick="p1_sim">Sim</button>
+        <button class="button_conexao" onclick="p1_nao">Não</button>
+        <button class="button_conexao" onclick="p1_neutro">Não Reparei</button>
+    </div>
+    </div></div>
+
+       <div class="linha"></div>
+
+        <div class="perguntas">O quanto você se sentiu útil ou com propósito hoje?
+                    <div class="alternativas">
+            <p class="alternativa-legenda">Negativo</p>
+            <button class="button1" onclick="p2_1"></button>
+            <button class="button2" onclick="p2_2"></button>
+            <button class="button3" onclick="p2_3"></button>
+            <button class="button4" onclick="p2_4"></button>
+            <button class="button5" onclick="p2_5"></button>
+            <button class="button6" onclick="p2_6"></button>
+            <button class="button7" onclick="p2_7"></button>
+            <p class="alternativa-legenda">Positivo</p>
+        </div>
+    </div>
+                <div class="linha-final"></div>
 </body>
 </html>
