--- a/Site/Web-data-viz/public/home.HTML
+++ b/Site/Web-data-viz/public/home.HTML
@@ -13,7 +13,7 @@
     <nav>
         <a href="#">HOME</a>
         <a href="#">QUEM SOMOS</a>
-        <a href="simulador.html">LIFESTYLE</a>
+        <a href="formulario.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
     </nav>
  </header> 
