--- a/Site/Web-data-viz/public/login copy.html
+++ b/Site/Web-data-viz/public/login copy.html
@@ -26,7 +26,7 @@
     <nav>
         <a href="#">HOME</a>
         <a href="#">QUEM SOMOS</a>
-        <a href="simulador.html">LIFESTYLE</a>
+        <a href="/Site/Web-data-viz/public/formulario.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
     </nav>
  </header> 
