--- a/Site/Web-data-viz/public/simulador.html
+++ b/Site/Web-data-viz/public/simulador.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -18,7 +18,7 @@
 <body>
 
     <!--header inicio-->
-    <div class="header">
+    <!-- <div class="header">
         <div class="container">
             <h1 class="titulo">AquaTech</h1>
             <ul class="navbar">
@@ -35,11 +35,11 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
-
+<!-- 
     <!-- simulador inicio -->
-    <div class="simulador">
+    <!-- <div class="simulador">
         <div class="container">
             <h2>Simulador</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium tempora architecto sint fugit
@@ -73,10 +73,10 @@
             <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
             <span class="version">v1.0.0</span>
         </div>
-    </div>
+    </div> -->
     <!--footer fim-->
 
 
 </body>
 
-</html>
+</html> --> -->
