--- a/Site/Web-data-viz/public/cadastro.html
+++ b/Site/Web-data-viz/public/cadastro.html
@@ -26,7 +26,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a href="simulador.html">Simulador</a>
+            <a href="./formulario.HTML">Simulador</a>
           </li>
           <li>|</li>
           <li>
