--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -24,7 +24,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a href="simulador.html">Simulador</a>
+            <a href="formulario.HTML">Simulador</a>
           </li>
           <li>|</li>
           <li>
