--- a/Site/Web-data-viz/public/login.html
+++ b/Site/Web-data-viz/public/login.html
@@ -27,7 +27,7 @@
                     <a href="index.html">Inicial</a>
                 </li>
                 <li>
-                    <a href="simulador.html">Simulador</a>
+                    <a href="formulario.HTML">Simulador</a>
                 </li>
                 <li>|</li>
                 <li class="agora">
