--- a/Site/Web-data-viz/public/cadastro.html
+++ b/Site/Web-data-viz/public/cadastro.html
@@ -26,7 +26,7 @@
             <a href="#">Inicial</a>
           </li>
           <li>
-            <a href="./formulario.HTML">Simulador</a>
+            <a href="formulario.HTML">Simulador</a>
           </li>
           <li>|</li>
           <li>
@@ -198,26 +198,6 @@
 
     return false;
   }
-
-  // Listando empresas cadastradas 
-  // function listar() {
-  //   fetch("/empresas/listar", {
-  //     method: "GET",
-  //   })
-  //     .then(function (resposta) {
-  //       resposta.json().then((empresas) => {
-  //         empresas.forEach((empresa) => {
-  //           listaEmpresasCadastradas.push(empresa);
-
-  //           console.log("listaEmpresasCadastradas")
-  //           console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-  //         });
-  //       });
-  //     })
-  //     .catch(function (resposta) {
-  //       console.log(`#ERRO: ${resposta}`);
-  //     });
-  // }
 
   function sumirMensagem() {
     cardErro.style.display = "none";
