--- a/Site/Web-data-viz/public/dashboard.HTML
+++ b/Site/Web-data-viz/public/dashboard.HTML
@@ -46,7 +46,7 @@
     <div class="grafico-principal">
         <h2>Impacto dos seus dias</h2>
         <div class="box-grafico">
-             <canvas id="graficoLinha"></canvas>
+            <canvas id="myChart"></canvas>
         </div>
     </div></div>
     <script src="../js/dash.js"></script>
