--- a/Site/Web-data-viz/public/home.HTML
+++ b/Site/Web-data-viz/public/home.HTML
@@ -11,13 +11,12 @@
      <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">QUEM SOMOS</a>
-        <a href="formulario.HTML">LIFESTYLE</a>
+        <a href="home.HTML">HOME</a>
+        <a href="sobre.html">QUEM SOMOS</a>
+        <a href="lifestyle.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
     </nav>
  </header> 
-
  <main>
     <!-- Primeira tela -->
     <div class="home-fundo1">
