--- a/Site/Web-data-viz/public/cadastro.html
+++ b/Site/Web-data-viz/public/cadastro.html
@@ -6,24 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PHOS - Cadastro</title>
-    <link rel="stylesheet" href="../public/css/cadastro.css">  
-    <link rel="stylesheet" href="../public/css/cabecalho.css">
-        <link rel="stylesheet" href="./css/estilo.css">
-    <!-- <link rel="stylesheet" href="../Style/cadastro.css"> -->
-    <link rel="icon" href="./assets/icon/favicon2.ico" />
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" /> -->
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="./css/estilo.css">
   <script src="./js/sessao.js"></script>
-
-
 </head>
 
 <body>
-      <div class="header">
+      <!-- <div class="header">
       <div class="container">
         <h1 class="titulo">AquaTech</h1>
         <ul class="navbar">
           <li class="agora">
-            <a href="#">Inicial</a>
+            <a href="login.html">Inicial</a>
           </li>
           <li>
             <a href="formulario.HTML">Simulador</a>
@@ -37,17 +31,17 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   <!--header inicio-->
-   <!-- <header>
+   <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">QUEM SOMOS</a>
+        <a href="formulario.HTML">HOME</a>
+        <a href="#login.html">QUEM SOMOS</a>
         <a href="simulador.html">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
     </nav>
- </header> -->
+ </header>
   <!--header fim-->
 
   <!-- <div class="login">
