--- a/Site/Web-data-viz/public/cadastro.html
+++ b/Site/Web-data-viz/public/cadastro.html
@@ -8,6 +8,7 @@
     <title>PHOS - Cadastro</title>
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="css/login.css">
   <script src="./js/sessao.js"></script>
 </head>
 
@@ -36,7 +37,7 @@
    <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="formulario.HTML">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="#login.html">QUEM SOMOS</a>
         <a href="simulador.html">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
@@ -78,7 +79,7 @@
                  <label for="input_senha2">Confirmar Senha</label>
                  <input type="text" id="confirmacao_senha_input" placeholder="Confirme a senha">
 
-                 <p class="login-link">Já possui conta?<a href="../HTML/login.HTML">Faça login</a></p>
+                 <p class="login-link">Já possui conta? <a href="login.html">Faça login</a></p>
                  <button onclick="cadastrar()">Cadastrar</button>
         </div>
     </div>
