--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -1,82 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>AquaTech | Página Inicial</title>
-
-    <script src="./js/sessao.js"></script>
-
-    <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="icon" href="./assets/icon/favicon2.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <title>Home | PHOS</title>
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
 </head>
-
 <body>
-    <div class="header">
-      <div class="container">
-        <h1 class="titulo">AquaTech</h1>
-        <ul class="navbar">
-          <li class="agora">
-            <a href="#">Inicial</a>
-          </li>
-          <li>
-            <a href="dashboard.HTML">Simulador</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="login.html">Login</a>
-          </li>
-          <li>
-            <a href="cadastro.html">Cadastro</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  
-    <div class="banner">
-      <div class="container">
-        <p>Preservando <span>hoje</span> para existirem <span>amanhã</span>.</p>
-      </div>
-    </div>
-  
-    <div class="social">
-      <div class="container">
-        <div class="boxes">
-          <div class="box">
-            <img src="assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-          <div class="box">
-            <img src="assets/imgs/growth_color.png">
-            <h4>Valores</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
-              vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
-              minima.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  
-    <div class="footer">
-      <div class="container">
-        <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-        <span class="version">v1.0.0</span>
-      </div>
-    </div>
-  </body>
+     <header>
+    <div class="logo">PHOS</div>
+    <nav>
+        <a href="home.HTML">HOME</a>
+        <a href="sobre.html">QUEM SOMOS</a>
+        <a href="lifestyle.HTML">LIFESTYLE</a>
+        <a href="cadastro.html">PARTICIPE</a>
+    </nav>
+ </header> 
+ <main>
+    <!-- Primeira tela -->
+    <div class="home-fundo1">
+        <div class="home1-info">
+    <img src="foto-phos" alt="">
+        <p class="home-texto">Acenda esperança, ilumine corações.</p>
+        <button id='home-button' onclick="faca()">Faça Parte</button>
+    </div></div>
+    <!-- Fim primeira tela -->
 
+    <!-- Segunda tela -->
+        <div class="home-fundo2">
+    <p class="home2-titulo">PILARES</p>
+
+    <!-- cartões de imagem -->
+    <section class="section_home-cards">
+        <div class="home-card">
+            <img src="imagem-home" alt="">
+            <p class="home-text-card"></p>
+        </div>
+                <div class="home-card">
+            <img src="imagem-home" alt="">
+            <p class="home-text-card"></p>
+        </div>
+                <div class="home-card">
+            <img src="imagem-home" alt="">
+            <p class="home-text-card"></p>
+        </div>
+    </section>
+    <!-- Fim dos cartões -->
+    </div>
+    <!-- Fim segunda tela -->
+
+    <!-- Terceira tela -->
+     <div class="home-fundo3">
+     <div class="home3-titulo">
+    <p class="home2-titulo">AÇÕES FEITAS</p>
+    </div>
+    <div class="home3-carrosel">
+      <div class="home3-carrosel-voltar"></div>
+      <div class="home3-carrosel-imagem"></div>
+      <div class="home3-carrosel-passar"></div>
+    </div>
+</div>
+     <!-- Fim terceira tela -->
+ </main>
+</body>
 </html>
