--- a/Site/Web-data-viz/public/lifestyle.HTML
+++ b/Site/Web-data-viz/public/lifestyle.HTML
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | PHOS</title>
-    <link rel="stylesheet" href="../public/css/cabecalho.css">
-    <link rel="stylesheet" href="../public/css/sobre.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/sobre.css">
+    <link rel="stylesheet" href="css/lifestyle.css">
 </head>
 <body>
      <header>
@@ -19,15 +20,16 @@
  </header> 
     <!-- Tela Um -->
  <main>
-        <div class="home-fundo1">
-        <div class="home1-info">
+        <div class="life-fundo1">
+            <div class="life-box1">
+        <div class="life-info">
     <img src="foto-phos" alt="">
-        <p class="home-texto">Acenda esperança, ilumine corações.</p>
-        <button id='home-button' onclick="faca()">Faça Parte</button>
-    </div></div>
+        <p class="home-texto">Amar o próximo vai além de uma ação pontual, mas sim, uma escolha diária.</p>
+    </div>
+  <button id='life-button' onclick="faca()">Faça Parte</button></div> </div>
 
     <!-- Tela Dois -->
-     <div class="home-fundo2">
+     <div class="life-fundo2">
     <div class="texto-lifestyle">
       <h2>LIFESTYLE</h2>
       <P>No PHOS, entendemos que amar não devem ser gestos eventuais,mas sim, são atitudes que moldam quem somos e como nos relacionamos com o mundo. 
