--- a/Site/Web-data-viz/public/sobre.html
+++ b/Site/Web-data-viz/public/sobre.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | PHOS</title>
-    <link rel="stylesheet" href="../public/css/cabecalho.css">
-    <link rel="stylesheet" href="../public/css/sobre.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/sobre.css">
 </head>
 <body>
      <header>
@@ -19,30 +19,28 @@
  </header> 
     <!-- Tela Um -->
  <main>
-        <div class="home-fundo2">
-            <div class="img-lifestyle"></div>
-    <div class="texto-lifestyle">
-      <h2>LIFESTYLE</h2>
-      <P>No PHOS, entendemos que amar não devem ser gestos eventuais,mas sim, são atitudes que moldam quem somos e como nos relacionamos com o mundo. 
-        Ser luz é olhar ao redor com sensibilidade, perceber dores invisíveis e responder com empatia. 
-        Quando fazemos do amor uma prática contínua, deixamos de apenas impactar momentos — e passamos a transformar vidas.</P>
+    <div class="home-fundo2">
+        <div class="texto-lifestyle">
+      <h2>QUEM SOMOS</h2>
+      <P>O PHOS nasceu com o propósito de levar o evangelho além das paredes da igreja. Nosso objetivo é atender às necessidades das pessoas — 
+        seja ouvindo, oferecendo apoio emocional ou suprindo carências básicas, como a alimentação. Acima de tudo, buscamos reacender a esperança 
+        que, muitas vezes, se apaga silenciosamente com o passar dos dias. Queremos ser luz na vida de alguém, lembrando a cada pessoa do seu valor e propósito.</P></div>
+      <div class="img-lifestyle"></div>   
     </div>
-</div>
+         
+    </div>
+
+
 
     <!-- Tela Dois -->
      <div class="home-fundo2">
+        <div class="img-lifestyle"></div>
     <div class="texto-lifestyle">
-      <h2>LIFESTYLE</h2>
-      <P>No PHOS, entendemos que amar não devem ser gestos eventuais,mas sim, são atitudes que moldam quem somos e como nos relacionamos com o mundo. 
-        Ser luz é olhar ao redor com sensibilidade, perceber dores invisíveis e responder com empatia. 
-        Quando fazemos do amor uma prática contínua, deixamos de apenas impactar momentos — e passamos a transformar vidas.</P>
-    </div>
-
-    <div class="img-lifestyle"></div>
-        
+      <h2>NOSSO OBJETIVO</h2>
+      <P>Levar esperança ao máximo de pessoas que conseguirmos, 
+        prestando apoio aos necessitados. Queremos levantar uma geração que vive com intencionalidade e propósito, consciente da sua responsabilidade e do impacto que pode causar no mundo ao seu redor.</P>
+    </div>  
 </div>
-
-
  </main>
 </body>
 </html>
