arrumando style das páginas

--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -34,16 +34,22 @@
     <!-- cartões de imagem -->
     <section class="section_home-cards">
         <div class="home-card">
-            <img src="imagem-home" alt="">
-            <p class="home-text-card"></p>
+            <img src="" alt="">
+            <h3 class="titulo=card">Reacender Esperança</h3>
+            <p class="home-text-card">Lembrar que ainda há caminhos, recomeços e motivos para continuar. Uma palavra pode reacender aquilo que parecia apagado.</p>
         </div>
                 <div class="home-card">
             <img src="imagem-home" alt="">
-            <p class="home-text-card"></p>
+            <h3 class="titulo=card">Ouvir as pessoas</h3>
+            <p class="home-text-card">Antes de falar, escolhemos escutar. Ouvir com 
+atenção é o primeiro passo para acolher e 
+transformar realidades.</p>
         </div>
                 <div class="home-card">
-            <img src="imagem-home" alt="">
-            <p class="home-text-card"></p>
+            <img src="" alt="">
+            <h3 class="titulo=card">Ajudar o próximo</h3>
+            <p class="home-text-card">Estender a mão, mesmo em gestos simples, 
+pode mudar o dia — ou a vida — de alguém.</p>
         </div>
     </section>
     <!-- Fim dos cartões -->
@@ -57,7 +63,9 @@
     </div>
     <div class="home3-carrosel">
       <div class="home3-carrosel-voltar"></div>
-      <div class="home3-carrosel-imagem"></div>
+      <div class="home3-carrosel-imagem">
+        <img src="" alt="agua-farol">
+      </div>
       <div class="home3-carrosel-passar"></div>
     </div>
 </div>
