--- a/Site/Web-data-viz/public/cadastro.html
+++ b/Site/Web-data-viz/public/cadastro.html
@@ -45,13 +45,13 @@
  </header>
   <!--header fim-->
 
-  <!-- <div class="login">
+   <div class="login">
     <div class="alerta_erro">
       <div class="card_erro" id="cardErro">
         <span id="mensagem_erro"></span>
       </div>
-    </div>
-    <div class="container">
+    </div></div>
+    <!-- <div class="container">
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
         <div class="formulario"> -->
