style dos pilares na pagina home

--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -34,19 +34,19 @@
     <!-- cartões de imagem -->
     <section class="section_home-cards">
         <div class="home-card">
-            <img src="" alt="">
+            <div class="img1"></div>
             <h3 class="titulo=card">Reacender Esperança</h3>
             <p class="home-text-card">Lembrar que ainda há caminhos, recomeços e motivos para continuar. Uma palavra pode reacender aquilo que parecia apagado.</p>
         </div>
                 <div class="home-card">
-            <img src="imagem-home" alt="">
+            <div class="img2"></div>
             <h3 class="titulo=card">Ouvir as pessoas</h3>
             <p class="home-text-card">Antes de falar, escolhemos escutar. Ouvir com 
 atenção é o primeiro passo para acolher e 
 transformar realidades.</p>
         </div>
                 <div class="home-card">
-            <img src="" alt="">
+            <div class="img3"></div>
             <h3 class="titulo=card">Ajudar o próximo</h3>
             <p class="home-text-card">Estender a mão, mesmo em gestos simples, 
 pode mudar o dia — ou a vida — de alguém.</p>
