--- a/Site/Web-data-viz/public/sobre.html
+++ b/Site/Web-data-viz/public/sobre.html
@@ -44,7 +44,7 @@
 
     <div class="home-fundo2">
         <div class="texto-lifestyle">
-      <h2>O QUE O PHOS É PARA MIM</h2>
+      <h2>O QUE O PHOS PARA MIM.</h2>
       <P>O PHOS é o lembrete de que a vida vai muito além de metas a serem alcançadas, e de que é necessário um tempo de silêncio para lembrar do sacrifício de Cristo e levar esse amor, que me alcançou, a outros.
 É não deixar a rotina ser vivida no automático, mas, de fato, viver cada dia com intencionalidade em tudo aquilo que me proponho a fazer.</P></div>
       <div class="img-lifestyle"></div>   
