--- a/Site/Web-data-viz/public/lifestyle.HTML
+++ b/Site/Web-data-viz/public/lifestyle.HTML
@@ -20,22 +20,22 @@
  </header> 
     <!-- Tela Um -->
  <main>
-        <div class="life-fundo1">
+        <div class="life-fundo1"></div>
             <div class="life-box1">
         <div class="life-info">
-    <img src="foto-phos" alt="">
-        <p class="home-texto">Amar o próximo vai além de uma ação pontual, mas sim, uma escolha diária.</p>
+            <h2>Amar o próximo vai além de uma ação pontual, mas sim, uma escolha diária.</h2>
+        <p class="home-texto"></p>
         <div class="linha-button">
-        <button id='life-button' onclick="faca()">Faça Parte</button></div></div> 
-    </div></div>
+        <button id='life-button' onclick="faca()">Faça Parte</button></div></div>
+    </div>
 
     <!-- Tela Dois -->
      <div class="life-fundo2">
     <div class="texto-lifestyle">
       <!-- <h2>LIFESTYLE</h2> -->
-      <P>No PHOS, entendemos que amar não devem ser gestos eventuais,mas sim, são atitudes que moldam quem somos e como nos relacionamos com o mundo. 
+      <!-- <P>No PHOS, entendemos que amar não devem ser gestos eventuais,mas sim, são atitudes que moldam quem somos e como nos relacionamos com o mundo. 
         Ser luz é olhar ao redor com sensibilidade, perceber dores invisíveis e responder com empatia. 
-        Quando fazemos do amor uma prática contínua, deixamos de apenas impactar momentos — e passamos a transformar vidas.</P>
+        Quando fazemos do amor uma prática contínua, deixamos de apenas impactar momentos — e passamos a transformar vidas.</P> -->
     </div>
 
         
