--- a/Site/Web-data-viz/public/sobre.html
+++ b/Site/Web-data-viz/public/sobre.html
@@ -25,7 +25,7 @@
       <P>O PHOS nasceu com o propósito de levar o evangelho além das paredes da igreja. Nosso objetivo é atender às necessidades das pessoas — 
         seja ouvindo, oferecendo apoio emocional ou suprindo carências básicas, como a alimentação. Acima de tudo, buscamos reacender a esperança 
         que, muitas vezes, se apaga silenciosamente com o passar dos dias. Queremos ser luz na vida de alguém, lembrando a cada pessoa do seu valor e propósito.</P></div>
-      <div class="img-lifestyle"></div>   
+      <div class="img-lifestyle1"></div>   
     </div>
          
     </div>
@@ -34,7 +34,7 @@
 
     <!-- Tela Dois -->
      <div class="home-fundo2">
-        <div class="img-lifestyle"></div>
+        <div class="img-lifestyle2"></div>
     <div class="texto-lifestyle">
       <h2>NOSSO OBJETIVO</h2>
       <P>Levar esperança ao máximo de pessoas que conseguirmos, 
@@ -44,10 +44,10 @@
 
     <div class="home-fundo2">
         <div class="texto-lifestyle">
-      <h2>O QUE O PHOS PARA MIM.</h2>
+      <h2>O QUE O PHOS É PARA MIM</h2>
       <P>O PHOS é o lembrete de que a vida vai muito além de metas a serem alcançadas, e de que é necessário um tempo de silêncio para lembrar do sacrifício de Cristo e levar esse amor, que me alcançou, a outros.
 É não deixar a rotina ser vivida no automático, mas, de fato, viver cada dia com intencionalidade em tudo aquilo que me proponho a fazer.</P></div>
-      <div class="img-lifestyle"></div>   
+      <div class="img-lifestyle3"></div>   
     </div>
  </main>
 </body>
