style: indicadores da dash

--- a/Site/Web-data-viz/public/dashboard.HTML
+++ b/Site/Web-data-viz/public/dashboard.HTML
@@ -6,7 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/grafico.js"></script>
-    <link rel="stylesheet" href="dash.css">
+    <link rel="stylesheet" href="./css/dash.css">
 </head>
 
 <body>
@@ -26,26 +26,26 @@
     </div>
 
     <div class="linha-indicadores">
-        <div class="boxiindicadores">
+        <div class="boxiindicadores1">
             <div class="titulo_indicadores">
         Tem se sentido</div>
            <div id="indicador1"></div>
         </div>
     
-        <div class="boxiindicadores">
+        <div class="boxiindicadores2">
             <div class="titulo_indicadores">
         Interação com as pessoas</div>
            <div id="indicador2"></div>
         </div>
 
-        <div class="boxiindicadores">
+        <div class="boxiindicadores3">
             <div class="titulo_indicadores">
         Pessoas beneficiadas
     </div>
            <div id="indicador3"></div>
         </div>
 
-        <div class="boxiindicadores"> 
+        <div class="boxiindicadores4"> 
             <div class="titulo_indicadores">
         Senso de propósito</div> 
            <div id="indicador4"></div>
