style: grafico principal

--- a/Site/Web-data-viz/public/dashboard.HTML
+++ b/Site/Web-data-viz/public/dashboard.HTML
@@ -17,7 +17,7 @@
         </div>
         <div class="dash-usuario">
             <div class="img-usuario">
-                <img class="imagem-config" src="/Site/Assets/Imagens/Design sem nome (16).png" alt="">
+                   <div class="imagem-config"></div>
             </div>
             <div class="nome-usuario">
                 Camila Vitória
@@ -54,8 +54,8 @@
 
     <div class="box-do-principal">
     <div class="grafico-principal">
-        <h2>Impacto dos seus dias</h2>
         <div class="box-grafico">
+            <h2>Impacto dos seus dias</h2>
             <canvas id="myChart"></canvas>
         </div>
     </div></div>
