--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -62,11 +62,15 @@ pode mudar o dia — ou a vida — de alguém.</p>
     <p class="home2-titulo">AÇÕES FEITAS</p>
     </div>
     <div class="home3-carrosel">
-      <div class="home3-carrosel-voltar"></div>
+      <!-- <div class="home3-carrosel-voltar"></div> -->
       <div class="home3-carrosel-imagem">
-        <img src="" alt="agua-farol">
+        <img src="./assets/imagem/fmt-acao1.png" alt="agua-farol">
+        <img src="./assets/imagem/fmt-acao2.png" alt="agua-farol">
+        <img src="./assets/imagem/fmt-acao3.png" alt="agua-farol">
+        <img src="./assets/imagem/fmt-acao3.png" alt="agua-farol">
+        <img src="" alt="">
       </div>
-      <div class="home3-carrosel-passar"></div>
+      <!-- <div class="home3-carrosel-passar"></div> -->
     </div>
 </div>
      <!-- Fim terceira tela -->
